--- a/papers/components/app.css
+++ b/papers/components/app.css
@@ -10,5 +10,20 @@
 .DraftEditor-root .is-active {
   outline: 2px solid;
   outline-color: #1976d2;
-  #border-radius: 2px 
+  /*border-radius: 2px */
+}
+
+.DraftEditor-root .img-entity.is-active:after {
+  cursor: pointer;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translate(50%, 50%);
+  content: '';
+  background: #1976d2;
+  width: 14px;
+  height: 14px;
+  border-radius: 99px;
+  border: 2px solid white;
 }
