--- a/papers/components/app.css
+++ b/papers/components/app.css
@@ -13,6 +13,7 @@
   /*border-radius: 2px */
 }
 
+/*
 .DraftEditor-root .img-entity.is-active:after {
   cursor: pointer;
   display: inline-block;
@@ -27,3 +28,4 @@
   border-radius: 99px;
   border: 2px solid white;
 }
+*/
